kubernetes/apps/coroot/coroot/app/httproute-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coroot-external
spec:
  hostnames: ["coroot-ext.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: coroot-coroot
          port: 8080
